# ferros

./: .clippy.toml  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  JustFile  README.md  ROADMAP.md  TODO.md  rust-toolchain.toml  rustfmt.toml
.cursor/rules/: rust-rules.mdc
.github/: renovate.json
.github/workflows/: rust.yml
crates/ferros/: Cargo.toml  README.md
crates/ferros-core/: Cargo.toml  README.md  build.rs  ferros.entitlements
crates/ferros-core/src/: breakpoints.rs  debugger.rs  error.rs  events.rs  lib.rs  prelude.rs  types.rs
crates/ferros-core/src/breakpoints/: builder.rs  mod.rs
crates/ferros-core/src/platform/: mod.rs
crates/ferros-core/src/platform/macos/: breakpoints.rs  constants.rs  debug_registers.rs  error.rs  exception.rs  ffi.rs  guards.rs  launch.rs  memory.rs  mod.rs  registers.rs  task.rs  threads.rs  types.rs
crates/ferros-core/src/platform/macos/registers/: arm64.rs  debug.rs  mod.rs  x86_64.rs
crates/ferros-core/src/symbols/: cache.rs  demangle.rs  extractor.rs  image.rs  mod.rs  unwind.rs
crates/ferros-core/src/types/: address.rs  mod.rs  process.rs  registers.rs  stack.rs  symbols.rs
crates/ferros-core/src/unwind/: mod.rs
crates/ferros-core/tests/: error.rs  macos_integration.rs  types.rs
crates/ferros-mir/: Cargo.toml  README.md
crates/ferros-mir/src/: lib.rs
crates/ferros-protocol/: Cargo.toml  README.md
crates/ferros-ui/: Cargo.toml  README.md
crates/ferros-ui/src/: app.rs  event.rs  lib.rs  tui.rs  ui.rs  widgets.rs
crates/ferros-utils/: Cargo.toml  README.md
crates/ferros-utils/src/: lib.rs  logging.rs
crates/ferros/examples/: README.md  hello_ptrace.rs  hello_target.rs  logger.rs  memory_inspector.rs  readme.md  run-test-examples.sh  simple_test.rs  test_debugger.sh  test_target.rs
crates/ferros/src/: main.rs
docs/: architecture.md  debugger_research.md  tool_references.md
research/: debugger_linux.md
scripts/: run-test-launch.sh
website/: index.html  package.json  pnpm-lock.yaml
website/src/scripts/: debugger-simulation.js  depth-enhancements.js  features.js  hero.js  intro.js  main.js  navigation.js  parallax.js  particles.js  roadmap.js  scroll-animations.js
website/src/styles/: style.css
