[workspace]
members = [
    "crates/ferros",
    "crates/ferros-core",
    "crates/ferros-mir",
    "crates/ferros-ui",
    "crates/ferros-protocol",
    "crates/ferros-utils",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
# missing_docs = "warn"
unused = { level = "warn", priority = -1 }

# Clippy lints
[workspace.lints.clippy]
# Enforce pedantic clippy lints (set priority to avoid conflicts)
pedantic = { level = "warn", priority = -2 }
# Allow nursery lints (experimental)
nursery = { level = "allow", priority = -1 }
# Cargo-related lints
cargo = { level = "warn", priority = -2 }
# Allow multiple crate versions (transitive dependencies)
multiple_crate_versions = { level = "allow", priority = -1 }

# Workspace dependencies
[workspace.dependencies]
thiserror = "2.0.17"
tracing = "0.1"

