[workspace]
members = [
    "crates/ferros",
    "crates/ferros-core",
    "crates/ferros-mir",
    "crates/ferros-protocol",
    "crates/ferros-utils",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }
rust_2024_incompatible_pat = "deny"

# Clippy lints
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
nursery = { level = "allow", priority = -1 }
cargo = { level = "warn", priority = -2 }
# Allow transitive dependencies
multiple_crate_versions = { level = "allow", priority = -1 }
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
undocumented_unsafe_blocks = "deny"

# Workspace dependencies
[workspace.dependencies]
thiserror = "2.0.17"
