[package]
name = "ferros-core"
version = "0.0.0"
edition = "2024"
description = "Low-level debugging primitives and process control for Ferros."
license = "Apache-2.0"
repository = "https://github.com/jamallyons/ferros"
# readme = "README.md"
keywords = ["debugger", "debugging", "ptrace"]
categories = ["development-tools"]

[dependencies]
thiserror = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]

[build-dependencies]
rustc_version = "0.4"

[lints]
workspace = true
