[package]
name = "ferros-mir"
version = "0.0.0"
edition = "2024"
description = "MIR integration, introspection, and analysis for Ferros."
license = "Apache-2.0"
repository = "https://github.com/jamallyons/ferros"
readme = "README.md"
keywords = ["debugger", "rust", "mir", "compiler"]
categories = ["development-tools"]

[dependencies]

[lints]
workspace = true
