[package]
name = "ferros-protocol"
version = "0.1.0"
edition = "2021"
description = "Communication layer between Ferros debugger and frontend."
license = "Apache-2.0"
repository = "https://github.com/jamallyons/ferros"
readme = "../../README.md"
keywords = ["debugger", "rust", "protocol", "communication"]
categories = ["development-tools", "debuggers"]

[dependencies]

[lints]
workspace = true
