[package]
name = "ferros-ui"
version = "0.0.0"
edition = "2021"
description = "Optional TUI/GUI for Ferros debugger visualization."
license = "Apache-2.0"
repository = "https://github.com/jamallyons/ferros"
readme = "README.md"
keywords = ["debugger", "rust", "tui", "gui"]
categories = ["development-tools"]

[dependencies]

[lints]
workspace = true
