[package]
name = "ferros-ui"
version = "0.0.0"
edition = "2024"
description = "Optional TUI/GUI for Ferros debugger visualization."
license = "Apache-2.0"
repository = "https://github.com/jamallyons/ferros"
readme = "README.md"
keywords = ["debugger", "rust", "tui", "gui"]
categories = ["development-tools"]
publish = false

[dependencies]
ratatui = "0.29"
crossterm = "0.29.0"
ferros-core = { path = "../ferros-core" }
ferros-utils = { path = "../ferros-utils" }
tokio = { workspace = true }

[lints]
workspace = true
