[package]
name = "ferros-utils"
version = "0.0.0"
edition = "2021"
description = "Shared utilities, logging, config, and helpers for Ferros."
license = "Apache-2.0"
repository = "https://github.com/jamallyons/ferros"
readme = "README.md"
keywords = ["debugger", "rust", "utilities", "logging"]
categories = ["development-tools"]
publish = false

[dependencies]

[lints]
workspace = true
