[package]
name = "ferros-utils"
version = "0.0.0"
edition = "2024"
description = "Shared utilities, logging, config, and helpers for Ferros."
license = "Apache-2.0"
repository = "https://github.com/jamallyons/ferros"
readme = "README.md"
keywords = ["debugger", "rust", "utilities", "logging"]
categories = ["development-tools"]
publish = false

[dependencies]
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi", "registry", "chrono"] }
tracing-appender = "0.2"
chrono = "0.4.42"

[lints.clippy]
# Allow multiple crate versions (needed for tracing-appender which uses thiserror 1.0)
# Use priority 0 to override the default deny from -D warnings
multiple-crate-versions = { level = "allow", priority = 0 }
