[package]
name = "ferros"
version = "0.0.0"
edition = "2021"
description = "A Rust-native debugger with hybrid MIR and system-level introspection."
license = "Apache-2.0"
repository = "https://github.com/jamallyons/ferros"
homepage = "https://github.com/jamallyons/ferros"
documentation = "https://docs.rs/ferros"
readme = "./README.md"
keywords = ["debugger", "rust", "mir", "debugging"]
categories = ["development-tools"]

[features]
# Include nothing by default
default = []

full = [] # todo - add features here

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

ferros-core = { path = "../ferros-core" }
ferros-ui = { path = "../ferros-ui" }
ferros-utils = { path = "../ferros-utils" }

[dev-dependencies]
ctrlc = "3.4"