[package]
name = "ferros"
version = "0.0.0"
edition = "2024"
description = "A Rust-native debugger with hybrid MIR and system-level introspection."
license = "Apache-2.0"
repository = "https://github.com/jamallyons/ferros"
homepage = "https://github.com/jamallyons/ferros"
documentation = "https://docs.rs/ferros"
# readme = "./README.md"
keywords = ["debugger", "mir", "debugging"]
categories = ["development-tools"]

[dependencies]

ferros-core = { path = "../ferros-core" }
ferros-utils = { path = "../ferros-utils" }
